Finish adding ingredients and steps to recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,42 @@
   <body>
     <a href="../index.html">Home</a>
     <h1>Lasagna</h1>
+    <img
+      src="../23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.webp"
+      alt="Photo of a well prepared lasagna dish"
+    />
+    <br />
+    <h3>Description</h3>
+    <p>A deliciously beautiful dish with the flavor to back up its claim</p>
+    <h3>Ingredients</h3>
+    <ul>
+      <li>Meat</li>
+      <li>Onion and garlic</li>
+      <li>Tomato products</li>
+      <li>Sugar</li>
+      <li>Spices and seasonings</li>
+      <li>Lasagna noodles</li>
+      <li>Cheeses</li>
+      <li>Egg</li>
+      <h3>Preparation Steps</h3>
+      <ol>
+        Make the meat Sauce.
+      </ol>
+      <ol>
+        Cook the noodles.
+      </ol>
+      <ol>
+        Make the ricotta mixture.
+      </ol>
+      <ol>
+        Layer the lasagna.
+      </ol>
+      <ol>
+        Cover with foil and bake.
+      </ol>
+      <ol>
+        Let the lasagna rest before serving.
+      </ol>
+    </ul>
   </body>
 </html>
