Fix <ol> in lasagna recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -27,22 +27,12 @@
       <li>Egg</li>
       <h3>Preparation Steps</h3>
       <ol>
-        Make the meat Sauce.
-      </ol>
-      <ol>
-        Cook the noodles.
-      </ol>
-      <ol>
-        Make the ricotta mixture.
-      </ol>
-      <ol>
-        Layer the lasagna.
-      </ol>
-      <ol>
-        Cover with foil and bake.
-      </ol>
-      <ol>
-        Let the lasagna rest before serving.
+        <li>Make the meat Sauce.</li>
+        <li>Cook the noodles.</li>
+        <li>Make the ricotta mixture.</li>
+        <li>Layer the lasagna.</li>
+        <li>Cover with foil and bake.</li>
+        <li>Let the lasagna rest before serving.</li>
       </ol>
     </ul>
   </body>
