Update home with new mushroom recipe

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
       <li><a href="./recipes/lasagna.html">lasagna</a></li>
       <li><a href="./recipes/potatosalad.html">potato salad</a></li>
+      <li><a href="./recipes/stuffedmushrooms.html"></a></li>
     </ul>
   </body>
 </html>
